--- a/src/styles/screens/ConfirmationScreen.css
+++ b/src/styles/screens/ConfirmationScreen.css
@@ -72,7 +72,15 @@
   max-height: 265px;
   overflow: hidden;
 }
-
+  .embed-responsive1 video {
+         width: 100%;
+        height: 210px;
+        max-height: 420px;
+        display: block;
+        border-radius: 10px;
+        object-fit: cover;
+        padding-inline: 0rem;
+}
 .embed-responsive video {
   width: 100%;
   height: auto;
@@ -100,7 +108,15 @@
   object-fit: cover;
       padding-inline: 6rem;
 }
-  
+  .embed-responsive1 video {
+         width: 100%;
+        height: 210px;
+        max-height: 420px;
+        display: block;
+        border-radius: 10px;
+        object-fit: cover;
+        padding-inline: 0rem;
+}
 }
 
 .captcha-image{
